<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_settings"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_size"
        android:layout_marginBottom="5dp"/>

    <RadioGroup
        android:id="@+id/radioGroupTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radioButtonSmall"
            style="@style/LargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_small_size" />

        <RadioButton
            android:id="@+id/radioButtonNormal"
            style="@style/LargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_normal_size" />

        <RadioButton
            android:id="@+id/radioButtonLarge"
            style="@style/LargeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_large_size" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchDarkMode"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>
