<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainPage">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.unipicityvibe.UI.CustomView.EditTextView
                android:id="@+id/editTextViewName"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                app:label_text="@string/name" />

            <com.example.unipicityvibe.UI.CustomView.EditTextView
                android:id="@+id/editTextViewLastName"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                app:label_text="@string/last_name"/>

            <com.example.unipicityvibe.UI.CustomView.EditTextView
                android:id="@+id/editTextViewEmail"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                app:label_text="@string/email"/>

            <com.example.unipicityvibe.UI.CustomView.EditTextView
                android:id="@+id/editTextViewPassword"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:inputType="textPassword"
                android:layout_gravity="center"
                app:label_text="@string/password" />

            <com.example.unipicityvibe.UI.CustomView.EditTextView
                android:id="@+id/editTextViewPassword2"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:inputType="textPassword"
                android:layout_gravity="center"
                app:label_text="@string/repeat_password"/>

            <TextView
                style="@style/ErrorText"
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="" />

            <Button
                style="@style/DefaultButton"
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/register"/>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
