<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <com.example.unipicityvibe.components.TopViewMenu
            android:id="@+id/top_view_menu"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/MainPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="271dp">

            <com.example.unipicityvibe.components.EditTextView
                android:id="@+id/editTextViewName"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                app:label_text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.unipicityvibe.components.EditTextView
                android:id="@+id/editTextViewLastName"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                app:label_text="@string/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextViewName" />

            <com.example.unipicityvibe.components.EditTextView
                android:id="@+id/editTextViewEmail"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextViewLastName"
                app:label_text="@string/email"/>

            <com.example.unipicityvibe.components.EditTextView
                android:id="@+id/editTextViewPassword"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:inputType="textPassword"
                app:label_text="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextViewEmail" />

            <com.example.unipicityvibe.components.EditTextView
                android:id="@+id/editTextViewPassword2"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:inputType="textPassword"
                app:label_text="@string/repeat_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextViewPassword" />

            <Button
                style="@style/DefaultButton"
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Error -->
            <TextView
                style="@style/ErrorText"
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>